--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-intersection-observer": "^9.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
